@@ -184,3 +184,4 @@ playbackinfo.json
 .VSCodeCounter/
 ytheaders.json
 .idea/
+settings.json
