@@ -3,3 +3,7 @@
 ## New Features
 
 - add settings page -- kaneryu on 2025-08-01
+
+## Bugfixes
+
+- fix bug where settings would not save to disk -- kaneryu on 2025-08-01
